19-Jun-2021 V0.78 Add ChemRefMappingProvider(), modernize ChemRefExtractor(), and update __docformat__
28-Jun-2021 V0.79 Add LigandNeighborMappingProvider() LigandNeighborMappingExtractor() and associated tests
30-Jun-2021 V0.80 Make GlycanProvider() a subclass of StashableBase(), add GlycanEtlWorkflow() and associated tests
30-Jun-2021 V0.81 Simplify install scripts and update pipeline configuration
26-Jul-2021 V0.82 Replace all explicit use of StashUtil with StashableBase subclasses
26-Jul-2021 V0.83 Add tree node lists for SCOP2 and ECOD
28-Jul-2021 V0.84 Update stash options for GlycanEtlWorkflow and PubChemEtlWrapper
29-Jul-2021 V0.85 Gracefully handle and report missing ligand_comp_id's in LigandNeighborMappingProvider()
 2-Aug-2021 V0.86 Adjust reporting intervals and diagnostic output and update dependencies and configuration
 4-Aug-2021 V0.87 Adjust logging verbosity and dependencies
22-Sep-2021 V0.88 Add modules EntryInfoProvider and EntryInfoEtlWorkflow and associated tests.
23-Sep-2021 V0.89 Update dependencies
 9-Feb-2022 V0.90 Enable http loading of SIFTS data
29-Mar-2022 V0.91 Adjust ReferenceSequenceAnnotationProvider & ReferenceSequenceCacheProvider;
                  Add computed-models to tests & workflow;
                  Fix test case in testObjectExtractor;
                  Switch fixturePdbxLoader to use remote HTTP loading for Azure tests instead of local mock/sandbox paths
25-May-2022 V0.92 Add error checking for SIFTS data loading in ReferenceSequenceAnnotationProvider and ReferenceSequenceAssignmentProvider
 9-Jan-2023 V0.93 Configuration changes to support tox 4
 9-Mar-2023 V0.94 Update ExDbWorkflow to make use of multiple processors for 'upd_ref_seq' operation;
                  Lower refChunkSize to 10 for requests to UniProt API
13-Mar-2023 V0.95 Updates to PubChem workflow to use multiprocess count, disable git stash testing, remove obsolete entries from test data
12-Apr-2023 V0.96 Add CARD ontology data to tree builder