@@ -5,6 +5,7 @@
 #  Workflow wrapper  --  Glycan ETL utilities
 #
 #  Updates:
+#   1-Jun-2023 aae Don't back up resources to GitHub during cache update workflows
 #
 ##
 __docformat__ = "google en"
