@@ -90,3 +90,4 @@
                   Lower refChunkSize to 10 for requests to UniProt API
 13-Mar-2023 V0.95 Updates to PubChem workflow to use multiprocess count, disable git stash testing, remove obsolete entries from test data
 12-Apr-2023 V0.96 Add CARD ontology data to tree builder
+ 1-Jun-2023 V0.97 Don't back up resources to GitHub during cache update workflows
